gen/antlr/cmmParser.java
// Generated from /Users/steveyyy/Programming/cmmInterpreter/src/antlr/cmm.g4 by ANTLR 4.6
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		If=1, Else=2, While=3, Read=4, Write=5, Int=6, Real=7, Break=8, Ident=9, 
		IntConstant=10, RealConstant=11, BooleanConstant=12, CompOp=13, MulDivMod=14, 
		AddMin=15, LBracket=16, RBracket=17, LBigBracket=18, RBigBracket=19, LMidBracket=20, 
		RMidBracket=21, Assign=22, LineEnd=23, Comma=24, WS=25, SL_COMMENT=26, 
		MUL_COMMENT=27;
	public static final int
		RULE_program = 0, RULE_stmt = 1, RULE_stmt_block = 2, RULE_var_decl = 3, 
		RULE_type = 4, RULE_varlist = 5, RULE_decl_assign = 6, RULE_if_stmt = 7, 
		RULE_while_stmt = 8, RULE_break_stmt = 9, RULE_read_stmt = 10, RULE_write_stmt = 11, 
		RULE_assign_stmt = 12, RULE_value = 13, RULE_array = 14, RULE_constant = 15, 
		RULE_expr = 16;
	public static final String[] ruleNames = {
		"program", "stmt", "stmt_block", "var_decl", "type", "varlist", "decl_assign", 
		"if_stmt", "while_stmt", "break_stmt", "read_stmt", "write_stmt", "assign_stmt", 
		"value", "array", "constant", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if'", "'else'", "'while'", "'read'", "'write'", "'int'", "'real'", 
		"'break'", null, null, null, null, null, null, null, "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "'='", "';'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "If", "Else", "While", "Read", "Write", "Int", "Real", "Break", 
		"Ident", "IntConstant", "RealConstant", "BooleanConstant", "CompOp", "MulDivMod", 
		"AddMin", "LBracket", "RBracket", "LBigBracket", "RBigBracket", "LMidBracket", 
		"RMidBracket", "Assign", "LineEnd", "Comma", "WS", "SL_COMMENT", "MUL_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(34);
				stmt();
				}
				}
				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << While) | (1L << Read) | (1L << Write) | (1L << Int) | (1L << Real) | (1L << Break) | (1L << Ident) | (1L << IntConstant) | (1L << RealConstant) | (1L << LBigBracket))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public While_stmtContext while_stmt() {
			return getRuleContext(While_stmtContext.class,0);
		}
		public Break_stmtContext break_stmt() {
			return getRuleContext(Break_stmtContext.class,0);
		}
		public Assign_stmtContext assign_stmt() {
			return getRuleContext(Assign_stmtContext.class,0);
		}
		public Read_stmtContext read_stmt() {
			return getRuleContext(Read_stmtContext.class,0);
		}
		public Write_stmtContext write_stmt() {
			return getRuleContext(Write_stmtContext.class,0);
		}
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Real:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				var_decl();
				}
				break;
			case If:
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				if_stmt();
				}
				break;
			case While:
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				while_stmt();
				}
				break;
			case Break:
				enterOuterAlt(_localctx, 4);
				{
				setState(42);
				break_stmt();
				}
				break;
			case Ident:
			case IntConstant:
			case RealConstant:
				enterOuterAlt(_localctx, 5);
				{
				setState(43);
				assign_stmt();
				}
				break;
			case Read:
				enterOuterAlt(_localctx, 6);
				{
				setState(44);
				read_stmt();
				}
				break;
			case Write:
				enterOuterAlt(_localctx, 7);
				{
				setState(45);
				write_stmt();
				}
				break;
			case LBigBracket:
				enterOuterAlt(_localctx, 8);
				{
				setState(46);
				stmt_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stmt_blockContext extends ParserRuleContext {
		public TerminalNode LBigBracket() { return getToken(cmmParser.LBigBracket, 0); }
		public TerminalNode RBigBracket() { return getToken(cmmParser.RBigBracket, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public Stmt_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterStmt_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitStmt_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitStmt_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stmt_blockContext stmt_block() throws RecognitionException {
		Stmt_blockContext _localctx = new Stmt_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(LBigBracket);
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				stmt();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << While) | (1L << Read) | (1L << Write) | (1L << Int) | (1L << Real) | (1L << Break) | (1L << Ident) | (1L << IntConstant) | (1L << RealConstant) | (1L << LBigBracket))) != 0) );
			setState(55);
			match(RBigBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public TerminalNode LineEnd() { return getToken(cmmParser.LineEnd, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			type();
			setState(58);
			varlist();
			setState(59);
			match(LineEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(cmmParser.Int, 0); }
		public TerminalNode Real() { return getToken(cmmParser.Real, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if ( !(_la==Int || _la==Real) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarlistContext extends ParserRuleContext {
		public List<TerminalNode> Ident() { return getTokens(cmmParser.Ident); }
		public TerminalNode Ident(int i) {
			return getToken(cmmParser.Ident, i);
		}
		public List<Decl_assignContext> decl_assign() {
			return getRuleContexts(Decl_assignContext.class);
		}
		public Decl_assignContext decl_assign(int i) {
			return getRuleContext(Decl_assignContext.class,i);
		}
		public List<ArrayContext> array() {
			return getRuleContexts(ArrayContext.class);
		}
		public ArrayContext array(int i) {
			return getRuleContext(ArrayContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(cmmParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(cmmParser.Comma, i);
		}
		public VarlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterVarlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitVarlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitVarlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarlistContext varlist() throws RecognitionException {
		VarlistContext _localctx = new VarlistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(63);
				match(Ident);
				}
				break;
			case 2:
				{
				setState(64);
				decl_assign();
				}
				break;
			case 3:
				{
				setState(65);
				array();
				}
				break;
			}
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(68);
				match(Comma);
				setState(72);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(69);
					match(Ident);
					}
					break;
				case 2:
					{
					setState(70);
					decl_assign();
					}
					break;
				case 3:
					{
					setState(71);
					array();
					}
					break;
				}
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_assignContext extends ParserRuleContext {
		public TerminalNode Ident() { return getToken(cmmParser.Ident, 0); }
		public TerminalNode Assign() { return getToken(cmmParser.Assign, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Decl_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterDecl_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitDecl_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitDecl_assign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_assignContext decl_assign() throws RecognitionException {
		Decl_assignContext _localctx = new Decl_assignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decl_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(Ident);
			setState(80);
			match(Assign);
			setState(81);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_stmtContext extends ParserRuleContext {
		public If_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stmt; }
	 
		public If_stmtContext() { }
		public void copyFrom(If_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class I_SB_E_SBContext extends If_stmtContext {
		public TerminalNode If() { return getToken(cmmParser.If, 0); }
		public TerminalNode LBracket() { return getToken(cmmParser.LBracket, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBracket() { return getToken(cmmParser.RBracket, 0); }
		public List<Stmt_blockContext> stmt_block() {
			return getRuleContexts(Stmt_blockContext.class);
		}
		public Stmt_blockContext stmt_block(int i) {
			return getRuleContext(Stmt_blockContext.class,i);
		}
		public TerminalNode Else() { return getToken(cmmParser.Else, 0); }
		public I_SB_E_SBContext(If_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterI_SB_E_SB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitI_SB_E_SB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitI_SB_E_SB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class I_S_E_SContext extends If_stmtContext {
		public TerminalNode If() { return getToken(cmmParser.If, 0); }
		public TerminalNode LBracket() { return getToken(cmmParser.LBracket, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBracket() { return getToken(cmmParser.RBracket, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode Else() { return getToken(cmmParser.Else, 0); }
		public I_S_E_SContext(If_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterI_S_E_S(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitI_S_E_S(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitI_S_E_S(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class I_SBContext extends If_stmtContext {
		public TerminalNode If() { return getToken(cmmParser.If, 0); }
		public TerminalNode LBracket() { return getToken(cmmParser.LBracket, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBracket() { return getToken(cmmParser.RBracket, 0); }
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public I_SBContext(If_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterI_SB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitI_SB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitI_SB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class I_S_E_SBContext extends If_stmtContext {
		public TerminalNode If() { return getToken(cmmParser.If, 0); }
		public TerminalNode LBracket() { return getToken(cmmParser.LBracket, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBracket() { return getToken(cmmParser.RBracket, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode Else() { return getToken(cmmParser.Else, 0); }
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public I_S_E_SBContext(If_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterI_S_E_SB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitI_S_E_SB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitI_S_E_SB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class I_SB_E_SContext extends If_stmtContext {
		public TerminalNode If() { return getToken(cmmParser.If, 0); }
		public TerminalNode LBracket() { return getToken(cmmParser.LBracket, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBracket() { return getToken(cmmParser.RBracket, 0); }
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public TerminalNode Else() { return getToken(cmmParser.Else, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public I_SB_E_SContext(If_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterI_SB_E_S(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitI_SB_E_S(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitI_SB_E_S(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class I_SContext extends If_stmtContext {
		public TerminalNode If() { return getToken(cmmParser.If, 0); }
		public TerminalNode LBracket() { return getToken(cmmParser.LBracket, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBracket() { return getToken(cmmParser.RBracket, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public I_SContext(If_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterI_S(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitI_S(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitI_S(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_stmtContext if_stmt() throws RecognitionException {
		If_stmtContext _localctx = new If_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_stmt);
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new I_SContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				match(If);
				setState(84);
				match(LBracket);
				setState(85);
				expr(0);
				setState(86);
				match(RBracket);
				setState(87);
				stmt();
				}
				break;
			case 2:
				_localctx = new I_SBContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				match(If);
				setState(90);
				match(LBracket);
				setState(91);
				expr(0);
				setState(92);
				match(RBracket);
				setState(93);
				stmt_block();
				}
				break;
			case 3:
				_localctx = new I_S_E_SContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				match(If);
				setState(96);
				match(LBracket);
				setState(97);
				expr(0);
				setState(98);
				match(RBracket);
				setState(99);
				stmt();
				setState(100);
				match(Else);
				setState(101);
				stmt();
				}
				break;
			case 4:
				_localctx = new I_S_E_SBContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				match(If);
				setState(104);
				match(LBracket);
				setState(105);
				expr(0);
				setState(106);
				match(RBracket);
				setState(107);
				stmt();
				setState(108);
				match(Else);
				setState(109);
				stmt_block();
				}
				break;
			case 5:
				_localctx = new I_SB_E_SContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				match(If);
				setState(112);
				match(LBracket);
				setState(113);
				expr(0);
				setState(114);
				match(RBracket);
				setState(115);
				stmt_block();
				setState(116);
				match(Else);
				setState(117);
				stmt();
				}
				break;
			case 6:
				_localctx = new I_SB_E_SBContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(119);
				match(If);
				setState(120);
				match(LBracket);
				setState(121);
				expr(0);
				setState(122);
				match(RBracket);
				setState(123);
				stmt_block();
				setState(124);
				match(Else);
				setState(125);
				stmt_block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_stmtContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(cmmParser.While, 0); }
		public TerminalNode LBracket() { return getToken(cmmParser.LBracket, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBracket() { return getToken(cmmParser.RBracket, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public While_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).enterWhile_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmmListener ) ((cmmListener)listener).exitWhile_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmmVisitor ) return ((cmmVisitor<? extends T>)visitor).visitWhile_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
